--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    box-sizing: border-box;
+}
+body{
+ margin: 0;   
+ font-family: 'Karla', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+main{
+    padding: 50px;
+}
+
+.header{
+    display: flex;
+    background: linear-gradient(90deg,#672280 1.18%,#A626D3 100%);
+    color: white;
+    align-items: center;
+    height: 65px;
+    padding: 10px;
+}
+
+.header--img{
+    height: 100%;
+    margin-right: 6px;
+    
+}
+.header--title{
+    font-size: 25px;
+    margin-right: auto;
+}
+.header--text{
+   font-size: 1.1rem;
+   font-weight: 600;
+   padding-right: 20px;
+}
+
+.form{
+    margin: 50px auto auto ;
+    width: 50%;
+    display: grid;
+    grid-template: 40px 40px /1fr 1fr;
+    gap: 17px;
+
+}
+.form--button{
+    grid-column: 1/-1;
 }
