--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 *{
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 body{
  margin: 0;   
@@ -15,8 +17,9 @@ main{
     background: linear-gradient(90deg,#672280 1.18%,#A626D3 100%);
     color: white;
     align-items: center;
-    height: 65px;
+    height: 4.065rem;
     padding: 10px;
+    width: 100%;
 }
 
 .header--img{
@@ -35,13 +38,28 @@ main{
 }
 
 .form{
-    margin: 50px auto auto ;
+    margin: 3.125rem auto auto ;
     width: 50%;
     display: grid;
-    grid-template: 40px 40px /1fr 1fr;
+    grid-template: 2.5rem 2.5rem /1fr 1fr;
     gap: 17px;
-
+}
+.form--input{
+    border-radius: 5px;
+    border: 1px soild #D5D4d8;
+    text-indent: 5px;
 }
 .form--button{
     grid-column: 1/-1;
+    border-radius: 5px;
+    background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+@media only screen and (max-width:500px){
+    .form{
+        width: 100%;
+    }
 }
